[package]
name = "voxel-game"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cgmath = "0.18"
winit = "0.28"
vulkano = "0.33.0"
vulkano-util = "0.33.0"
vulkano-win = "0.33.0"
vulkano-shaders = "0.33.0"
rand = "0.8.4"
noise = "0.8.2"
bytemuck = "1.13.1"
matchbox_socket = "0.7.0"
futures = "0.3"
tokio = "1.29"
futures-timer = { version = "3" }
obj-rs = "0.7.1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }