[package]
name = "voxel-game"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cgmath = { version = "0.18", features = ["serde"] }
winit = { version = "0.28.2", features = ["serde"] }
vulkano = "0.34.1"
vulkano-util = "0.34.1"
vulkano-shaders = "0.34.0"
rand = "0.8.4"
bytemuck = "1.13.1"
matchbox_socket = "0.8.0"
futures = "0.3"
tokio = "1.29"
futures-timer = { version = "3" }
obj-rs = "0.7.1"
ron = "0.8"
serde_yaml = "0.9.25"
serde = { version = "1", features = ["derive"] }
egui_winit_vulkano = "0.27.0"
puffin = "0.18"
puffin_http = "0.15"
clippers = "0.1.2"
chrono = "0.4.31"
rfd = "0.13.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }