[package]
name = "voxel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matchbox_protocol = { version = "0.6", features = [
  "json",
] }
axum = { version = "0.6", features = ["ws"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
clap = { version = "4.3", features = ["derive", "env"] }
thiserror = "1.0"
tokio-stream = "0.1"
cgmath = { version = "0.18", features = ["serde"] }
voxel-shared = { path = ".." }

[dev-dependencies]
tokio-tungstenite = "0.19.0"
